Add ability to work with fully alive services.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,7 @@ hystrix:
 discoveryService:
   fixedDelayMs: ${PC_DISCOVERY_SERVICE_FIXED_DELAY_MS:10000}
   exclude: consul, application
+  onlyAlive: true
 
 httpClient:
   retry: 3
