--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,9 @@ buildscript {
 	repositories {
 		mavenCentral()
 	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
-	}
 }
 
 apply plugin: 'java'
-apply plugin: 'spring-boot' 
 
 jar {
 	baseName = 'hystrix-collector'
@@ -27,29 +23,11 @@ apply from: "$rootDir/gradle/pmd.gradle"
 apply from: "$rootDir/gradle/findbugs.gradle"
 
 dependencies {
-	compile('org.springframework.cloud:spring-cloud-starter-consul-discovery')
-	compile('org.springframework.boot:spring-boot-starter-security')
-	compile "com.netflix.rxjava:rxjava-core:0.20.7"
+	compile "org.springframework.boot:spring-boot-starter:1.5.6.RELEASE"
+	compile "com.google.code.gson:gson:2.8.1"
+    compile "com.netflix.rxjava:rxjava-core:0.20.7"
 	compile "com.netflix.rxjava:rxjava-apache-http:0.20.7"
 	compile "com.netflix.hystrix:hystrix-core:1.3.16"
-	compile "org.influxdb:influxdb-java:2.2"
+	compile "org.influxdb:influxdb-java:2.7"
 	testCompile "org.testng:testng:6.9.10"
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-	testCompile('org.springframework:spring-test')
-}
-
-dependencyManagement {
-	imports { 
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Brixton.RELEASE" 
-	}
-
-	dependencies {
-		dependency("org.springframework.boot:spring-boot-starter-test:${springBootVersion}") {
-			exclude 'junit:junit'
-		}
-		dependency 'org.testng:testng:6.9.10'
-	}
-}
-task wrapper(type: Wrapper) {
-	gradleVersion = '2.13'
 }
